# hust_sat_solver_remake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clause.cpp  dpll_solver.cpp  main.cpp  makefile
benchmark/: 3.res  4.res  5.res  6.cnf
include/: ConvertBoard.h  GenBoard.h  clause.h  dpll_solver.h
src/: clause.cpp
